<resources>
    <string name="app_name">Number Finder</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Number">Number</string>
    <string name="Locator">Locator</string>
    <string name="Home">Home</string>
    <string name="HomeDescription">Discover the precise location of any phone number with our Number Locator app.</string>
    <string name="NumberLocator">Number Locator</string>
    <string name="NumberLocatorDetails">Locate any person by phone number.</string>
    <string name="RateApp">Rate App</string>
    <string name="shareApp">Share App</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="permissionMessage">Some or all of the required permissions were denied.\nAllow Manually.</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="simInfo">Sim Info</string>
    <string name="simDescription">Information about sim card help.</string>
    <string name="findNetwork">Find Network</string>
    <string name="networkDescription">Search and find network of any number.</string>
    <string name="searchCoordinates">Search Coordinates</string>
    <string name="coordinatesDescription">Search any location by latitude and longitude.</string>
    <string name="findTraffic">Find Traffic</string>
    <string name="findTrafficDescription">Search and find traffic detail anywhere.</string>
    <string name="nearByPlaces">Near-by Places</string>
    <string name="placesDescription">Search any place near-by you by category.</string>
    <string name="worldProfiles">World Profiles</string>
    <string name="worldProfilesDescription">Get information about All the countries.</string>
    <string name="invalidNumber">Invalid number.</string>
    <string name="invalidNumberToast">Enter a valid number.</string>
    <string name="selectCountryFirstToast">Select country first.</string>
    <string name="enterNumberToast">Please enter number first</string>
    <string name="networkNotFoundToast">No Network Found</string>
    <string name="startLocationError">please select starting location.</string>
    <string name="endLocationError">please select destination location</string>
    <string name="invalidLat">Invalid latitude</string>
    <string name="invalidLng">Invalid longitude</string>
    <string name="search">Search</string>
    <string name="selectCountryCode">Select Country Code</string>
    <string name="enterNumber">Enter Number</string>
    <string name="yourLocation">Your Location</string>
    <string name="destination">Destination</string>
    <string name="banks">Banks</string>
    <string name="atm">ATM</string>
    <string name="Hospital">Hospital</string>
    <string name="Gas">Gas</string>
    <string name="PoliceStations">Police Stations</string>
    <string name="FireStations">Fire Stations</string>
    <string name="Locate">Locate</string>
    <string name="EnterLatitude">Enter Latitude</string>
    <string name="EnterLongitude">Enter Longitude</string>
    <string name="SearchCountry">Search country</string>
    <string name="SelectCountry">Select Country</string>
    <string name="languages">Languages</string>
    <string name="selectNetwork">Select a Network</string>
    <string name="gpsMsg">Turn on GPS?</string>
    <string name="numberLong">Number is too long</string>
    <string name="numberSHort">Number is too short</string>
    <string name="countryNotFound">Country Not Found</string>
    <string name="searchCoordinatesDescription">Search any location by latitude and longitude.</string>
    <string name="mapNotInstalled">Google Maps app not installed on the device.</string>
    <string name="requestPermission">Required permissions</string>
    <string name="accept">Accept</string>
    <string name="errorFetching">Error fetching location</string>
    <string name="locationPermissionDetails">To use this app we need this permission to in order to find your current location.</string>
    <string name="internetPermissionDetails">We need this permission in order to access your location.</string>
    <string name="gpsToast">It looks like the Location permission is not granted or either the device GPS is turned off. We recommend you to allow these permissions from device settings If you want the starting point to be your current location for this feature.</string>
    <string name="interToast">No internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>