<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SearchCoordinatesFragment">



    <fragment
        android:id="@+id/SearchCoordinatesMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/included_gradient" />

    <include
        android:id="@+id/included_gradient"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        layout="@layout/curve_layout"
        />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="@id/home_text"
        app:layout_constraintBottom_toBottomOf="@id/home_text"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back_icon"
        />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/searchCoordinates"
        app:layout_constraintStart_toEndOf="@id/backIcon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="20sp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/home_text"
        app:layout_constraintTop_toBottomOf="@id/home_text"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/searchCoordinatesDescription"
        android:textColor="#ffffff"
        android:textSize="12sp"
        />

    <View
        android:id="@+id/touchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/openBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bottom_sheet_bg"
        >


        <View
            android:id="@+id/BarView"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="#888888"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    bottomSheet-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/getCoordinatesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bottom_sheet_bg"
        android:visibility="gone"
        >

        <View
            android:id="@+id/emptyBarView"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:background="#888888"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/latitude_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/find_network_et_bg"
            android:elevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/emptyBarView">

            <EditText
                android:id="@+id/searchCoordinatesLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/EnterLatitude"
                android:inputType="numberDecimal"
                android:fontFamily="@font/quicksand_regular"
                android:textColor="#777777"
                android:textSize="16sp"
                android:padding="13dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/longitude_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/find_network_et_bg"
            android:elevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/latitude_et_layout">

            <EditText
                android:id="@+id/searchCoordinatesLon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/EnterLongitude"
                android:inputType="numberDecimal"
                android:fontFamily="@font/quicksand_regular"
                android:textColor="#777777"
                android:textSize="16sp"
                android:padding="13dp"
                android:shadowColor="@color/black" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchCoordinatesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/Locate"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textSize="16sp"
            app:backgroundTint="#88c8b9"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/longitude_et_layout"
            app:layout_constraintBottom_toTopOf="@+id/goneView"
            />


        <View
            android:id="@+id/goneView"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchCoordinatesBtn"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>