<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.RequiredPermissionsFragment">
    <include
        android:id="@+id/included_gradient"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        layout="@layout/curve_layout"
        />


    <TextView
        android:id="@+id/home_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/requestPermission"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="20sp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/included_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <RelativeLayout
            android:id="@+id/locationDetails"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/number_item_bg"
            android:elevation="2dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/enterNumberTV"

            >

            <ImageView
                android:id="@+id/location"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/location_icon" />

            <EditText
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:shadowColor="@color/black"
                android:layout_toEndOf="@id/location"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="#777777"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                android:inputType="numberDecimal"
                android:maxLength="14"
                android:hint="31234567xx"
                android:text="Location"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:background="@android:color/transparent"
                android:layout_toEndOf="@id/location"
                android:fontFamily="@font/quicksand_regular"
                android:textColor="#777777"
                android:textSize="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/locationPermissionDetails"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/internetDetails"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/number_item_bg"
            android:elevation="2dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/enterNumberTV"

            >

            <ImageView
                android:id="@+id/internet"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/internet_icon" />

            <EditText
                android:id="@+id/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:shadowColor="@color/black"
                android:layout_toEndOf="@id/internet"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="#777777"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                android:inputType="numberDecimal"
                android:maxLength="14"
                android:hint="31234567xx"
                android:text="Internet"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header1"
                android:background="@android:color/transparent"
                android:layout_toEndOf="@id/internet"
                android:fontFamily="@font/quicksand_regular"
                android:textColor="#777777"
                android:layout_marginEnd="20dp"
                android:textSize="12sp"
                android:text="@string/internetPermissionDetails"
                />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acceptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_marginTop="80dp"
            android:text="@string/accept"
            android:textSize="16sp"
            app:backgroundTint="@color/selectedBtn"
            app:cornerRadius="15dp"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>