<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FindNetworkFragment"

    >


    <include
        android:id="@+id/included_gradient"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        layout="@layout/curve_layout"
        />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="@+id/home_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_text" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/findNetwork"
        app:layout_constraintStart_toEndOf="@id/backIcon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="20sp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/home_text"
        app:layout_constraintTop_toBottomOf="@id/home_text"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/networkDescription"
        android:textColor="#ffffff"
        android:textSize="12sp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/findLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/included_gradient"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"



        >
        <TextView
            android:id="@+id/selectCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#777777"
            android:textSize="16sp"
            android:text="@string/selectCountryCode"


            />

        <RelativeLayout
            android:id="@+id/etLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/find_network_et_bg"
            android:elevation="2dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/selectCountry"

            >
            <TextView
                android:id="@+id/selectCountryET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@android:color/transparent"
                android:text="+1"
                android:backgroundTint="#f0f0f0"
                android:fontFamily="@font/quicksand_regular"
                android:textColor="#777777"
                android:textSize="16sp"

                />
            <ImageView
                android:id="@+id/selectCountryArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/next2_icon"
                android:layout_marginEnd="10dp"

                />


        </RelativeLayout>
        <TextView
            android:id="@+id/enterNumberTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/etLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#777777"
            android:textSize="16sp"
            android:text="@string/enterNumber"
            />
        <RelativeLayout
            android:id="@+id/numLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/find_network_et_bg"
            android:elevation="2dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/enterNumberTV"

            >
            <EditText
                android:id="@+id/findNumberET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:background="@android:color/transparent"
                android:shadowColor="@color/black"
                android:fontFamily="@font/quicksand_regular"
                android:textColor="#777777"
                android:textSize="16sp"
                android:inputType="numberDecimal"
                android:maxLength="14"
                android:hint="31234567xx"


                />
        </RelativeLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/NetworkSearchBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:padding="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            app:cornerRadius="15dp"
            android:textSize="16sp"
            app:backgroundTint="@color/selectedBtn"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="55dp"
            android:elevation="3dp"
            app:layout_constraintTop_toBottomOf="@id/numLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/networkInfoLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/findLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/networkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/find_network_2_icon"
            android:drawablePadding="15dp"
            android:fontFamily="@font/quicksand_regular"
            android:gravity="center"
            android:lineSpacingExtra="6sp"
            android:text="sdffbsdjk afbkjrfbvcjkazbfc)hjghhhkkg"
            android:textColor="#777777"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/findNetworkBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bottom_sheet_bg"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/findLayout">

        <View
            android:id="@+id/barView"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="#888888"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/selectCountryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:lineSpacingExtra="34sp"
            android:text="@string/SelectCountry"
            android:textColor="#555555"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barView" />

        <RelativeLayout
            android:id="@+id/search_country_et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/find_network_et_bg"
            android:elevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/selectCountryTitle">


            <EditText
                android:id="@+id/numberToFind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/searchCountryIcon"
                android:background="@android:color/transparent"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/SearchCountry"
                android:inputType="text"
                android:padding="13dp"
                android:shadowColor="@color/black" />

            <ImageView
                android:id="@+id/searchCountryIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="13dp"
                android:src="@drawable/search_icon" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/countryNotFound"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/number_item_bg"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_country_et_layout">

            <ImageView
                android:id="@+id/countryFlag"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:src="@drawable/not_found_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />


            <TextView
                android:id="@+id/countryNameTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/countryNotFound"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/countryFlag"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/countriesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_country_et_layout" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/countriesRecyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>